--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "material-ui-popup-state": "^5.0.9",
     "mongoose": "^7.2.1",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
