--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,13 @@
 DB_USERNAME=parthtrivedi0710
 DB_PASSWORD=Parth@123
+
+PAYTM_MID=DIY12386817555501617
+PAYTM_WEBSITE=DIYtestingweb
+PAYTM_CHANNEL_ID=WEB
+PAYTM_INDUSTRY_TYPE_ID=Retail
+PAYTM_MERCHANT_KEY=bKMfNxPPf_QdZppa
+PAYTM_CUST_ID=unzVbW56349744191124
+
+
+
+
